# roblocks

./: .gitignore  AUTHORS  CMakeLists.txt  DESIGN.md  IDEAS  IDEAS.md  KNOWHOW.md  LICENSE  Makefile.am  PLAN.md  README.md  configure.ac  index.html  params.json  synthetics.html
Resources/: component.mat  synthetics.conf
doc/: Plug.md  control.md  design.md
include/: Makefile.am
include/Synthetics/: BulletOpenGLApplication.h  DebugDrawer.h  FreeGLUTCallbacks.h  GameObject.h  Graphic.h  Hub.hpp  Makefile.am  Object.hpp  OpenGLMotionState.h  Synthetics.h
include/synthetics/: Graphic.hpp  Hub.hpp  Object.hpp  Physic.hpp
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
nbproject/private/: private.properties
src/: Block.blend  Block.hpp  BlockCompound.cpp  BlockCompound.hpp  BlockFactory.cpp  BlockFactory.hpp  BlockPlugging.cpp  BlockPlugging.hpp  BulletOpenGLApplication.cpp  BulletOpenGLApplication.hpp  CMakeLists.txt  Camera.h  Component.cpp  Component.hpp  ComponentPrinter.cpp  ComponentPrinter.hpp  Compound.cpp  Compound.hpp  CompoundStore.cpp  CompoundStore.hpp  Configurator.cpp  Configurator.hpp  Constructor.cpp  Constructor.hpp  ConstructorLua.cpp  ConstructorLua.hpp  Controller.cpp  Controller.hpp  DebugDrawer.cpp  Device.hpp  DisplayKeyHits.cpp  DisplayKeyHits.hpp  Exceptions.hpp  FileManager.cpp  FileManager.hpp  FreeGLUTCallbacks.hpp  GameObject.cpp  Graphic.cpp  HeadUpDisplay.cpp  HeadUpDisplay.hpp  (+56 more)
src/Blocks/: CMakeLists.txt
src/Blocks/Actor/: Servo.cpp
src/Blocks/Passive/: Hub.cpp  Hub.hpp
src/Components/: CMakeLists.txt  Factory.cpp  Factory.hpp
src/Components/Active/: Light.cpp  Light.hpp  Linear.cpp  Linear.hpp  Loudspeaker.cpp  Loudspeaker.hpp  Servo.cpp  Servo.hpp
src/Components/Actor/: Servo.cpp  Servo.hpp
src/Components/Passive/: Hub.cpp  Hub.hpp  Wedge.cpp  Wedge.hpp
src/Components/Sensitive/: Potentiometer.cpp  Potentiometer.hpp
src/Components/Tests/: test_factory.cpp  test_load_components.cpp
src/Compounds/: CMakeLists.txt  Factory.cpp  Factory.hpp
src/Compounds/Passive/: Hub.cpp  Hub.hpp
src/Constructor/: CMakeLists.txt  Command.hpp  CommandActivate.cpp  CommandActivate.hpp  CommandAdd.cpp  CommandAdd.hpp  CommandNone.hpp  CommandPlace.cpp  CommandPlace.hpp  CommandRemove.cpp  CommandRemove.hpp  CommandRotateInPlace.cpp  CommandRotateInPlace.hpp  CommandSetRoot.cpp  CommandSetRoot.hpp  ContextMenu.cpp  ContextMenu.hpp  Display.cpp  Display.hpp  FileManager.cpp  FileManager.hpp  History.cpp  History.hpp  Menu.cpp  Menu.hpp  MenuEntry.cpp  MenuEntry.hpp  Model.cpp  Model.hpp  Robot.cpp  Robot.hpp  RobotLua.cpp  SelectorDisplay.cpp  SelectorDisplay.hpp
src/Constructor/Tests/: PolyCoreMock.hpp  PolyRendererMock.hpp  test_command.cpp  test_history.cpp  test_menu.cpp  test_menu_entry.cpp  test_model.cpp  test_robot.cpp
src/Recorder/: CMakeLists.txt  Event.hpp  PlayEvents.cpp  PlayEvents.hpp  RecordEvents.cpp  RecordEvents.hpp
src/ShowKeyHits/: CMakeLists.txt  Display.cpp  Display.hpp  KeyLabel.cpp  KeyLabel.hpp
src/Tests/: UnitMock.hpp  test_component.cpp  test_component_printer.cpp  test_compound.cpp  test_compound_store.cpp  test_controller.cpp  test_hinge.cpp  test_hinge_point.cpp  test_knob.cpp  test_part.cpp  test_plug.cpp  test_robot.cpp  test_serializer.cpp  test_tag.cpp  test_unit_entity.cpp  test_unit_plugging.cpp  test_unit_position.cpp  test_value_range_mapping.cpp
src/Unit/: CMakeLists.txt  Component.cpp  Component.hpp  Compound.cpp  Compound.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  Orientation.cpp  Orientation.hpp
src/Unit/Tests/: test_unit_component.cpp  test_unit_compound.cpp  test_unit_entity.cpp  test_unit_orientation.cpp
src/Units/: CMakeLists.txt
src/Units/Passive/: Block.cpp  Block.hpp
src/ch/artificials/: Component.java  ComponentFactory.java  IComponent.java  Plug.java  Synthetics.java
src/ch/artificials/builder/: Command.java  CommandHistory.java
src/ch/artificials/components/passive/: Hub.java  HubFactory.java
stylesheets/: stylesheet.css
test/ch/artificials/: ComponentNGTest.java  PlugNGTest.java  PlugTest.java
test/ch/artificials/builder/: CommandHistoryManyCommandNGTest.java  CommandHistoryManyCommandTest.java  CommandHistoryOneComandNGTest.java  CommandHistoryOneComandTest.java  CommandHistoryTwoCommandNGTest.java  CommandHistoryTwoCommandTest.java  MockCommand.java
