cmake_minimum_required(VERSION 2.8)

##############################################################################
# DEFINE 
##############################################################################

##############################################################################
# BUILD 
##############################################################################
add_library(
  PassiveHub SHARED
  Passive/Hub.cpp
)

##############################################################################
# INSTALL 
##############################################################################
install(TARGETS PassiveHub
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
)

##############################################################################
# TESTING
##############################################################################
enable_testing()

