cmake_minimum_required(VERSION 2.8)

##############################################################################
# DEFINE 
##############################################################################
set(Compounds_SRCS
  Factory.cpp
)

set(Compounds_HDRS
  Factory.hpp
)

##############################################################################
# BUILD 
##############################################################################
add_library(
  compounds STATIC
  ${Compounds_SRCS} ${Compounds_HDRS}
)

add_library(
  PassiveHub SHARED
  Passive/Hub.cpp
)

##############################################################################
# INSTALL 
##############################################################################
install(TARGETS PassiveHub
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
)

##############################################################################
# TESTING
##############################################################################
enable_testing()

