cmake_minimum_required(VERSION 2.8)

##############################################################################
# DEFINE 
##############################################################################
set(Recorder_SRCS
  RecordEvents.cpp
)

set(Recorder_HDRS
  RecordEvents.hpp
)

##############################################################################
# BUILD 
##############################################################################
add_library(
  recorder STATIC
  ${Recorder_SRCS} ${Recorder_HDRS}
)

##############################################################################
# INSTALL 
##############################################################################

##############################################################################
# TESTING
##############################################################################
enable_testing()

