cmake_minimum_required(VERSION 2.8)

##############################################################################
# DEFINE 
##############################################################################
set(Recorder_SRCS
  RecordEvents.cpp
  PlayEvents.cpp
)

set(Recorder_HDRS
  RecordEvents.hpp
  PlayEvents.hpp
)

##############################################################################
# BUILD 
##############################################################################
add_library(
  recorder STATIC
  ${Recorder_SRCS} ${Recorder_HDRS}
)

##############################################################################
# INSTALL 
##############################################################################

##############################################################################
# TESTING
##############################################################################
enable_testing()

