cmake_minimum_required(VERSION 2.8)

##############################################################################
# DEFINE 
##############################################################################
set(ShowKeyHits_SRCS
  Display.cpp
)

set(ShowKeyHits_HDRS
  Display.hpp
)

##############################################################################
# BUILD 
##############################################################################
add_library(
  showkeyhits STATIC
  ${ShowKeyHits_SRCS} ${ShowKeyHits_HDRS}
)

##############################################################################
# INSTALL 
##############################################################################

##############################################################################
# TESTING
##############################################################################
enable_testing()


