cmake_minimum_required(VERSION 2.8)

##############################################################################
# DEFINE 
##############################################################################

##############################################################################
# BUILD 
##############################################################################
add_library(
  PassiveBlock SHARED
  Passive/Block.cpp
)

##############################################################################
# INSTALL 
##############################################################################
install(TARGETS PassiveBlock
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
)

##############################################################################
# TESTING
##############################################################################
enable_testing()

